deploy/base/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: hostium-keycloak
spec:
  type: ClusterIP
  selector:
    app: hostium-keycloak
  ports:
    - name: http
      port: 8080
      targetPort: 8080
