deploy/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: hostium-web
spec:
  type: ClusterIP
  selector:
    app: hostium-web
  ports:
    - name: http
      port: 80
      targetPort: 3000
