deploy/base/php-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.hostium.apperture.dev
      secretName: api-hostium-tls
  rules:
    - host: api.hostium.apperture.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php
                port:
                  number: 80
